[pf-evals] Switch to OIDC Login for evals test pipelines (#3630)
# Description

Please add an informative description that covers that changes made by
the pull request and link all relevant issues.

# All Promptflow Contribution checklist:
- [ ] **The pull request does not introduce [breaking changes].**
- [ ] **CHANGELOG is updated for new features, bug fixes or other
significant changes.**
- [ ] **I have read the [contribution
guidelines](https://github.com/microsoft/promptflow/blob/main/CONTRIBUTING.md).**
- [ ] **I confirm that all new dependencies are compatible with the MIT
license.**
- [ ] **Create an issue and link to the pull request to get dedicated
review from promptflow team. Learn more: [suggested
workflow](../CONTRIBUTING.md#suggested-workflow).**

## General Guidelines and Best Practices
- [ ] Title of the pull request is clear and informative.
- [ ] There are a small number of commits, each of which have an
informative message. This means that previously merged commits do not
appear in the history of the PR. For more information on cleaning up the
commits in your PR, [see this
page](https://github.com/Azure/azure-powershell/blob/master/documentation/development-docs/cleaning-up-commits.md).

### Testing Guidelines
- [ ] Pull request includes test coverage for the included changes.

--- a/.github/workflows/promptflow-evals-performance-test.yml
+++ b/.github/workflows/promptflow-evals-performance-test.yml
@@ -14,6 +14,10 @@ env:
   WORKING_DIRECTORY: ${{ github.workspace }}/src/promptflow-evals
   PROMPT_FLOW_TEST_MODE: "live"
 
+permissions:
+  id-token: write
+  contents: read
+
 jobs:
   test:
     strategy:
@@ -53,10 +57,11 @@ jobs:
       - name: generate end-to-end test config from secret
         run: echo '${{ secrets.PF_EVALS_E2E_TEST_CONFIG }}' >> connections.json
         working-directory: ${{ env.WORKING_DIRECTORY }}
-      - uses: azure/login@v2
+      - uses: azure/login@v1
         with:
-          creds: ${{ secrets.PF_EVALS_SP_CREDENTIALS }}
-          enable-AzPSSession: true
+          client-id: ${{ secrets.PF_EVALS_SP_CLIENT_ID }}
+          tenant-id: ${{ secrets.PF_EVALS_SP_TENANT_ID }}
+          subscription-id: ${{ secrets.PF_EVALS_SP_SUBSCRIPTION_ID }}
       - name: run performance tests
         id: performance_tests
         run: |
