--- a/src/promptflow-evals/tests/recordings/azure/test_builtin_evaluators_TestBuiltInEvaluators_test_content_safety_service_unavailable.yaml
+++ b/src/promptflow-evals/tests/recordings/azure/test_builtin_evaluators_TestBuiltInEvaluators_test_content_safety_service_unavailable.yaml
@@ -1,18 +1,16 @@
 interactions:
 - request:
-    body: ''
+    body: null
     headers:
-      accept:
+      Accept:
       - '*/*'
-      accept-encoding:
+      Accept-Encoding:
       - gzip, deflate
-      connection:
+      Connection:
       - close
-      content-type:
+      Content-Type:
       - application/json
-      host:
-      - management.azure.com
-      user-agent:
+      User-Agent:
       - promptflow-evals/0.1.0.dev0
     method: GET
     uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/00000/providers/Microsoft.MachineLearningServices/workspaces/00000?api-version=2023-08-01-preview
@@ -20,16 +18,16 @@ interactions:
     body:
       string: '{"id": "/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/00000/providers/Microsoft.MachineLearningServices/workspaces/00000",
         "name": "00000", "type": "Microsoft.MachineLearningServices/workspaces", "location":
-        "westus2", "tags": {}, "etag": null, "kind": "Default", "sku": {"name": "Basic",
-        "tier": "Basic"}, "properties": {"discoveryUrl": "https://westus2.api.azureml.ms/discovery",
-        "mlFlowTrackingUri": "azureml://westus2.api.azureml.ms/mlflow/v1.0/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/00000/providers/Microsoft.MachineLearningServices/workspaces/00000"}}'
+        "westus", "tags": {}, "etag": null, "kind": "Project", "sku": {"name": "Basic",
+        "tier": "Basic"}, "properties": {"discoveryUrl": "https://westus.api.azureml.ms/discovery",
+        "mlFlowTrackingUri": "azureml://westus.api.azureml.ms/mlflow/v1.0/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/00000/providers/Microsoft.MachineLearningServices/workspaces/00000"}}'
     headers:
       cache-control:
       - no-cache
       connection:
       - close
       content-length:
-      - '2911'
+      - '2971'
       content-type:
       - application/json; charset=utf-8
       expires:
@@ -45,27 +43,25 @@ interactions:
       x-content-type-options:
       - nosniff
       x-request-time:
-      - '0.038'
+      - '0.032'
     status:
       code: 200
       message: OK
 - request:
-    body: ''
+    body: null
     headers:
-      accept:
+      Accept:
       - '*/*'
-      accept-encoding:
+      Accept-Encoding:
       - gzip, deflate
-      connection:
+      Connection:
       - close
-      content-type:
+      Content-Type:
       - application/json
-      host:
-      - westus2.api.azureml.ms
-      user-agent:
+      User-Agent:
       - promptflow-evals/0.1.0.dev0
     method: GET
-    uri: https://westus2.api.azureml.ms/raisvc/v1.0/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/00000/providers/Microsoft.MachineLearningServices/workspaces/00000/checkannotation
+    uri: https://westus.api.azureml.ms/raisvc/v1.0/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/00000/providers/Microsoft.MachineLearningServices/workspaces/00000/checkannotation
   response:
     body:
       string: unknown to cluster
@@ -81,7 +77,109 @@ interactions:
       x-content-type-options:
       - nosniff
       x-request-time:
-      - '0.004'
+      - '0.006'
+    status:
+      code: 530
+      message: <none>
+- request:
+    body: null
+    headers:
+      Accept:
+      - '*/*'
+      Accept-Encoding:
+      - gzip, deflate
+      Connection:
+      - close
+      Content-Type:
+      - application/json
+      User-Agent:
+      - promptflow-evals/0.1.0.dev0
+    method: GET
+    uri: https://westus.api.azureml.ms/raisvc/v1.0/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/00000/providers/Microsoft.MachineLearningServices/workspaces/00000/checkannotation
+  response:
+    body:
+      string: unknown to cluster
+    headers:
+      connection:
+      - close
+      content-length:
+      - '18'
+      content-type:
+      - application/octet-stream
+      strict-transport-security:
+      - max-age=31536000; includeSubDomains; preload
+      x-content-type-options:
+      - nosniff
+      x-request-time:
+      - '0.006'
+    status:
+      code: 530
+      message: <none>
+- request:
+    body: null
+    headers:
+      Accept:
+      - '*/*'
+      Accept-Encoding:
+      - gzip, deflate
+      Connection:
+      - close
+      Content-Type:
+      - application/json
+      User-Agent:
+      - promptflow-evals/0.1.0.dev0
+    method: GET
+    uri: https://westus.api.azureml.ms/raisvc/v1.0/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/00000/providers/Microsoft.MachineLearningServices/workspaces/00000/checkannotation
+  response:
+    body:
+      string: unknown to cluster
+    headers:
+      connection:
+      - close
+      content-length:
+      - '18'
+      content-type:
+      - application/octet-stream
+      strict-transport-security:
+      - max-age=31536000; includeSubDomains; preload
+      x-content-type-options:
+      - nosniff
+      x-request-time:
+      - '0.008'
+    status:
+      code: 530
+      message: <none>
+- request:
+    body: null
+    headers:
+      Accept:
+      - '*/*'
+      Accept-Encoding:
+      - gzip, deflate
+      Connection:
+      - close
+      Content-Type:
+      - application/json
+      User-Agent:
+      - promptflow-evals/0.1.0.dev0
+    method: GET
+    uri: https://westus.api.azureml.ms/raisvc/v1.0/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/00000/providers/Microsoft.MachineLearningServices/workspaces/00000/checkannotation
+  response:
+    body:
+      string: unknown to cluster
+    headers:
+      connection:
+      - close
+      content-length:
+      - '18'
+      content-type:
+      - application/octet-stream
+      strict-transport-security:
+      - max-age=31536000; includeSubDomains; preload
+      x-content-type-options:
+      - nosniff
+      x-request-time:
+      - '0.005'
     status:
       code: 530
       message: <none>
