--- a/src/promptflow-evals/pyproject.toml
+++ b/src/promptflow-evals/pyproject.toml
@@ -48,7 +48,8 @@ promptflow-azure = { version = "<2.0.0,>=1.15.0", optional = true} # Needed for 
 pyjwt = ">=2.8.0"
 azure-identity = ">=1.17.1"
 azure-core = ">=1.30.2"
-
+nltk = ">=3.8.1"
+rouge-score= ">=0.1.2"
 
 [tool.poetry.extras]
 azure = [
