--- a/.github/workflows/sdk-cli-azure-test-production.yml
+++ b/.github/workflows/sdk-cli-azure-test-production.yml
@@ -43,7 +43,7 @@ jobs:
       matrix:
         # replay tests can cover more combinations
         os: [ubuntu-latest]
-        pythonVersion: ['3.8', '3.9', '3.10', '3.11']
+        pythonVersion: ['3.9', '3.10', '3.11']
     environment:
       internal
     runs-on: ${{ matrix.os }}
