--- a/src/promptflow-core/pyproject.toml
+++ b/src/promptflow-core/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "promptflow-core"
-version = "1.17.0.dev0"
+version = "1.18.0"
 description = "Prompt flow core"
 include = [
   "promptflow/core/_serving/static/*",
