--- a/src/promptflow-devkit/pyproject.toml
+++ b/src/promptflow-devkit/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "promptflow-devkit"
-version = "1.17.0.dev0"
+version = "1.18.0"
 description = "Prompt flow devkit"
 include = [
   "promptflow/_sdk/_service/static/*",
