add llm as judge flow and configs

--- a/fas_llm_applications/.devcontainer/devcontainer.json
+++ b/fas_llm_applications/.devcontainer/devcontainer.json
@@ -3,6 +3,8 @@
   "context": ".",
   "dockerFile": "Dockerfile",
   "runArgs": [
+    "--env-file",
+    "${localWorkspaceFolder}/digital_latin_project/.env",
     "-v",
     "/var/run/docker.sock:/var/run/docker.sock"
   ],
