--- a/scripts/distributing/configs/distribution_settings.json
+++ b/scripts/distributing/configs/distribution_settings.json
@@ -11,18 +11,18 @@
   },
   "targets": {
     "internal-index-release": {
-      "storage_account": "azuremlsdktestpypi",
+      "storage_account": "mlsdkfdnprod",
       "packages_container": "repo",
       "index_container": "wheels",
       "blob_prefix": "promptflow",
-      "endpoint": "azuremlsdktestpypi.azureedge.net"
+      "endpoint": "fdnpromptflow.azureedge.net"
     },
     "internal-index-test": {
-      "storage_account": "azuremlsdktestpypi",
+      "storage_account": "mlsdkfdnprod",
       "packages_container": "repo",
       "index_container": "wheels",
       "blob_prefix": "test-promptflow",
-      "endpoint": "azuremlsdktestpypi.azureedge.net"
+      "endpoint": "fdnpromptflow.azureedge.net"
     }
   }
 }
