--- a/src/promptflow-devkit/pyproject.toml
+++ b/src/promptflow-devkit/pyproject.toml
@@ -28,6 +28,9 @@ classifiers = [
   "Programming Language :: Python :: 3.9",
   "Programming Language :: Python :: 3.10",
   "Programming Language :: Python :: 3.11",
+  "Programming Language :: Python :: 3.12",
+  "Programming Language :: Python :: 3.13",
+  "Programming Language :: Python :: 3.14",
   "License :: OSI Approved :: MIT License",
   "Operating System :: OS Independent",
 ]
@@ -58,7 +61,7 @@ strictyaml = ">=1.5.0,<2.0.0"  # used to identify exact location of validation e
 waitress = ">=3.0.0,<4.0.0"  # used to serve local service
 azure-monitor-opentelemetry-exporter = ">=1.0.0b21,<2.0.0"
 pyarrow = { version = ">=14.0.1,<15.0.0", optional = true }  # used to read parquet file with pandas.read_parquet
-pillow = ">=10.1.0,<11.1.0"  # used to generate icon data URI for package tool
+pillow = ">=10.1.0,<11.3.0"  # used to generate icon data URI for package tool
 opentelemetry-exporter-otlp-proto-http = ">=1.22.0,<2.0.0"  # trace support
 flask-restx = ">=1.2.0,<2.0.0"  # PFS Swagger
 flask-cors = ">=6.0.0,<7.0.0"  # handle PFS CORS
